<resources>
    <string name="app_name">CertexApp</string>
    <string name="login_btn">LOGIN</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="password_ptBr">Senha</string>
    <string name="username_ptBr">Usuário</string>

    <!--activity_companies-->
    <string name="cnpj_companies_ptBr">*CNPJ:</string>
    <string name="state_registration_companies_ptBr">*Inscrição Estadual:</string>
    <string name="social_name_companies_ptBr">*Nome Social:</string>
    <string name="fantasy_name_companies_ptBr">*Nome Fantasia:</string>
    <string name="address_companies_ptBr">*Endereço:</string>
    <string name="cep_companies_ptBr">*CEP:</string>
    <string name="complement_companies_ptBr">Complemento:</string>
    <string name="neighborhood_companies_ptBr">*Bairro:</string>
    <string name="state_name_companies_ptBr">Estado</string>
    <string name="city_name_companies_ptBr">Cidade</string>
    <string name="signature_companies_bt">*GERAR ASSINATURA</string>

    <!--activity_user-->
    <string name="password_user_ptBr">*Senha</string>
    <string name="name_user_ptBr">*Nome</string>
    <string name="email_user_ptBr">*E-mail</string>

    <!--activity_dashboard-->
    <string name="create_report_dashboard_ptBr">Gerar \n Certificados</string>
    <string name="create_extinguishers_dashboard_ptBr">Adicionar \n Extintor</string>
    <string name="show_report_dashboard_ptBr">Visualizar \n Certificados</string>
    <string name="perfil_dashboard_ptBr">Alterar Perfil</string>

    <!--activity CheckList-->
    <string name="radio_conforme">CONFORME</string>
    <string name="radio_naoconforme">NÃO CONFORME</string>
    <string name="radio_na">N/A</string>
    <string name="description_checklist_ptBr">Descrição:</string>
    <string name="photo_checklist_ptBr">FOTO</string>


    <string name="empty"></string>
    <string name="permission_necessary">Permisão Necessária</string>
    <string name="storage_permission_is_encessary_to_wrote_event">É necessário ter acesso as pastas.</string>
    <string name="code_extinguishers_ptBr">*TAG do Extintor</string>
    <string name="number_extinguishers_ptBr">*Número do Extintor</string>
    <string name="capacity_extinguishers_ptBr">*Capacidade</string>
    <string name="charge_extinguishers_ptBr">*Carga</string>
    <string name="chargeDate_extinguishers_ptBr">*Data da Carga:</string>
    <string name="validate_extinguishers_ptBr">*Validade:</string>
    <string name="location_extinguishers_ptBr">*Localização:</string>
    <string name="manufacturers_extinguishers_ptBr">*Fornecedor</string>
    <string name="manufacturers_btn_extinguishers_ptBr">Buscar Fornecedor</string>
    <string name="status_extinguishers_ptBr">Situação:</string>
    <string name="status_btn__extinguishers_ptBr">Difinir Situação</string>
    <string name="description_manufacturers_ptBr">Descrição</string>
    <string name="cep__manufacturers_ptBr">CEP</string>
    <string name="city_manufacturers_ptBr">Cidade</string>
    <string name="state_manufacturers_ptBr">Estado</string>
    <string name="save_manufacturers_ptBr">Salvar</string>
    <string name="save_btn_extinguishers_ptBr">Salvar</string>
    <string name="cep_btn_search_manufacturers_ptBr">Pesquisar CEP</string>
    <string name="bt_dashboard_register_manufacturers_ptBr">Cadastrar Fornecedores</string>
    <string name="name_manufacturers_ptBr">Nome</string>
    <string name="fone_manufacturers_ptBr">Telefone</string>
    <string name="email_manufacturers_ptBr">E-mail</string>
    <string name="bt_edit">EDITAR</string>
    <string name="bt_delet">DELETAR</string>

</resources>
