<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_companies"
    android:orientation="vertical"
    tools:context=".ExtinguishersActivity">

    <ScrollView
        android:id="@+id/sv_companies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_name_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/code_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="number" /> <!--Validar CNPJ E PREENCHER O RESTO-->

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_cep_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/number_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" /> <!--Validar INSCRIÇÃO ESTADUAL CASO NÂO TIVER POR CNPJ-->

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_city_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/capacity_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_state_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/charge_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <EditText
                android:id="@+id/et_extinguishers_charge_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/chargeDate_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="number" /> <!--Validar CEP E PREENCHER ESTADO E CIDADE-->

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_extinguishers_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/validate_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_extinguishers_location"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/location_extinguishers_ptBr"
                android:inputType="textMultiLine" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_extinguishers_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/manufacturers_extinguishers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/bt_extinguishers_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manufacturers_btn_extinguishers_ptBr" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_extinguishers_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/status_extinguishers_ptBr"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/bt_manufacturers_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_btn__extinguishers_ptBr" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/bt_extinguishers_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_btn_extinguishers_ptBr" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>