<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_companies"
    tools:context=".ExtinguishersActivity">

    <ScrollView
        android:id="@+id/sv_companies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_name_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/name_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" /> <!--Validar CNPJ E PREENCHER O RESTO-->

            <EditText
                android:id="@+id/et_fone_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/fone_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_email_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/email_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_description_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/description_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_cep_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/cep__manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="number" /> <!--Validar INSCRIÇÃO ESTADUAL CASO NÂO TIVER POR CNPJ-->

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/bt_search_cep_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cep_btn_search_manufacturers_ptBr" />

            <EditText
                android:id="@+id/et_city_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/city_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/et_state_manufacturers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/state_manufacturers_ptBr"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>