<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_companies"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/iw_wallpaper"
        android:layout_width="199dp"
        android:layout_height="214dp"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/bt_dashboard_test"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:alpha="0.50"
        android:background="#CE2628"
        android:text="@string/show_report_dashboard_ptBr"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/bt_dashboard_test2"
        app:layout_constraintTop_toBottomOf="@+id/iw_wallpaper" />

    <Button
        android:id="@+id/bt_dashboard_test2"
        android:layout_width="150dp"
        android:layout_height="230dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="256dp"
        android:alpha="0.50"
        android:background="#CE2628"
        android:text="@string/crate_report_dashboard_ptBr"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iw_wallpaper"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_dashboard_test3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:alpha="0.50"
        android:background="#CE2628"
        android:text="@string/perfil_dashboard_ptBr"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/bt_dashboard_test2"
        app:layout_constraintTop_toBottomOf="@+id/iw_wallpaper" />

</android.support.constraint.ConstraintLayout>